<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/myHomeBlue">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/username"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_username"
            android:hint="@string/login_username"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColorHint="#8ccffe"
            android:textColor="@color/textWhite"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/password"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_password"
            android:hint="@string/login_password"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColorHint="#8ccffe"
            android:inputType="textPassword"
            android:textColor="@color/textWhite"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_btn"
        android:layout_marginTop="40dp"
        android:text="登 录"
        android:textColor="@color/myHomeBlue"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <TextView
            android:id="@+id/tv_nouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_user"
            android:textColor="@color/textBlack"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_nouser"
            android:text="@string/register"
            android:layout_marginLeft="8dp"
            android:textColor="#fff"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"/>
    </RelativeLayout>
</LinearLayout>