<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/comment_banner_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="欢迎来到MyHome"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textBlack"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="建立一个账户给你,首先,我们需要你的手机号码。"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:layout_marginLeft="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/iv_tellPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/tell_phone"/>
            <EditText
                android:id="@+id/et_user_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_tellPhone"
                android:hint="@string/register_one_tellPhone"
                android:background="@null"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:textColorHint="#B0B0B0"
                android:textSize="16sp"
                android:inputType="number"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BBBBBB"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/iv_idf_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/idf_code"/>
            <EditText
                android:id="@+id/et_verify_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_idf_code"
                android:hint="@string/register_one_idfCode"
                android:background="@null"
                android:layout_marginLeft="12dp"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:textColorHint="#B0B0B0"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/btn_send_idf_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/send_idf_code"
                android:background="@drawable/send_idfcode"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BBBBBB"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/btn_next_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/next"
            android:background="@drawable/send_idfcode"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="為什麼MyHome需要你的手機號?"
                android:textColor="#bfbfbf"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>