<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="#ffffff">
    <include layout="@layout/comment_banner_top"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp">
        <ImageView
            android:id="@+id/iv_tellPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/tell_phone"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_tellPhone"
            android:hint="@string/register_one_tellPhone"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColorHint="#B0B0B0"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBBBB"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/iv_idf_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/idf_code"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_idf_code"
            android:hint="@string/register_one_idfCode"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColorHint="#B0B0B0"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/send_idf_code"
            android:background="@drawable/send_idfcode"
            android:textColor="#ffffff"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBBBB"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/setting_password"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_password"
            android:hint="输入您的新密码"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColorHint="#B0B0B0"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBBBB"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/iv_react_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/racte"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"/>
        <TextView
            android:id="@+id/tv_url_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_react_one"
            android:layout_marginLeft="10dp"
            android:text="同意"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/iv_react_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/racte"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"/>
        <TextView
            android:id="@+id/tv_url_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_react_two"
            android:layout_marginLeft="10dp"
            android:text="同意"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:text="提  交"
        android:background="@drawable/send_idfcode"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
</LinearLayout>